# flatbuffers/python/quantra/PriceYearOnYearInflationCapFloorRequest.py
@@ -1,0 +1,156 @@
+# automatically generated by the FlatBuffers compiler, do not modify
+
+# namespace: quantra
+
+import flatbuffers
+from flatbuffers.compat import import_numpy
+np = import_numpy()
+
+# Request to price one or more year-on-year inflation cap/floor trades.
+class PriceYearOnYearInflationCapFloorRequest(object):
+    __slots__ = ['_tab']
+
+    @classmethod
+    def GetRootAs(cls, buf, offset=0):
+        n = flatbuffers.encode.Get(flatbuffers.packer.uoffset, buf, offset)
+        x = PriceYearOnYearInflationCapFloorRequest()
+        x.Init(buf, n + offset)
+        return x
+
+    @classmethod
+    def GetRootAsPriceYearOnYearInflationCapFloorRequest(cls, buf, offset=0):
+        """This method is deprecated. Please switch to GetRootAs."""
+        return cls.GetRootAs(buf, offset)
+    # PriceYearOnYearInflationCapFloorRequest
+    def Init(self, buf, pos):
+        self._tab = flatbuffers.table.Table(buf, pos)
+
+    # PriceYearOnYearInflationCapFloorRequest
+    def Pricing(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(4))
+        if o != 0:
+            x = self._tab.Indirect(o + self._tab.Pos)
+            from quantra.Pricing import Pricing
+            obj = Pricing()
+            obj.Init(self._tab.Bytes, x)
+            return obj
+        return None
+
+    # PriceYearOnYearInflationCapFloorRequest
+    def CapFloors(self, j):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(6))
+        if o != 0:
+            x = self._tab.Vector(o)
+            x += flatbuffers.number_types.UOffsetTFlags.py_type(j) * 4
+            x = self._tab.Indirect(x)
+            from quantra.PriceYoYInflationCapFloor import PriceYoYInflationCapFloor
+            obj = PriceYoYInflationCapFloor()
+            obj.Init(self._tab.Bytes, x)
+            return obj
+        return None
+
+    # PriceYearOnYearInflationCapFloorRequest
+    def CapFloorsLength(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(6))
+        if o != 0:
+            return self._tab.VectorLen(o)
+        return 0
+
+    # PriceYearOnYearInflationCapFloorRequest
+    def CapFloorsIsNone(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(6))
+        return o == 0
+
+def PriceYearOnYearInflationCapFloorRequestStart(builder):
+    builder.StartObject(2)
+
+def Start(builder):
+    PriceYearOnYearInflationCapFloorRequestStart(builder)
+
+def PriceYearOnYearInflationCapFloorRequestAddPricing(builder, pricing):
+    builder.PrependUOffsetTRelativeSlot(0, flatbuffers.number_types.UOffsetTFlags.py_type(pricing), 0)
+
+def AddPricing(builder, pricing):
+    PriceYearOnYearInflationCapFloorRequestAddPricing(builder, pricing)
+
+def PriceYearOnYearInflationCapFloorRequestAddCapFloors(builder, capFloors):
+    builder.PrependUOffsetTRelativeSlot(1, flatbuffers.number_types.UOffsetTFlags.py_type(capFloors), 0)
+
+def AddCapFloors(builder, capFloors):
+    PriceYearOnYearInflationCapFloorRequestAddCapFloors(builder, capFloors)
+
+def PriceYearOnYearInflationCapFloorRequestStartCapFloorsVector(builder, numElems):
+    return builder.StartVector(4, numElems, 4)
+
+def StartCapFloorsVector(builder, numElems):
+    return PriceYearOnYearInflationCapFloorRequestStartCapFloorsVector(builder, numElems)
+
+def PriceYearOnYearInflationCapFloorRequestEnd(builder):
+    return builder.EndObject()
+
+def End(builder):
+    return PriceYearOnYearInflationCapFloorRequestEnd(builder)
+
+try:
+    from typing import List, Optional
+except:
+    pass
+
+class PriceYearOnYearInflationCapFloorRequestT(object):
+
+    # PriceYearOnYearInflationCapFloorRequestT
+    def __init__(self):
+        self.pricing = None  # type: Optional[PricingT]
+        self.capFloors = None  # type: List[PriceYoYInflationCapFloorT]
+
+    @classmethod
+    def InitFromBuf(cls, buf, pos):
+        priceYearOnYearInflationCapFloorRequest = PriceYearOnYearInflationCapFloorRequest()
+        priceYearOnYearInflationCapFloorRequest.Init(buf, pos)
+        return cls.InitFromObj(priceYearOnYearInflationCapFloorRequest)
+
+    @classmethod
+    def InitFromPackedBuf(cls, buf, pos=0):
+        n = flatbuffers.encode.Get(flatbuffers.packer.uoffset, buf, pos)
+        return cls.InitFromBuf(buf, pos+n)
+
+    @classmethod
+    def InitFromObj(cls, priceYearOnYearInflationCapFloorRequest):
+        x = PriceYearOnYearInflationCapFloorRequestT()
+        x._UnPack(priceYearOnYearInflationCapFloorRequest)
+        return x
+
+    # PriceYearOnYearInflationCapFloorRequestT
+    def _UnPack(self, priceYearOnYearInflationCapFloorRequest):
+        if priceYearOnYearInflationCapFloorRequest is None:
+            return
+        if priceYearOnYearInflationCapFloorRequest.Pricing() is not None:
+            self.pricing = PricingT.InitFromObj(priceYearOnYearInflationCapFloorRequest.Pricing())
+        if not priceYearOnYearInflationCapFloorRequest.CapFloorsIsNone():
+            self.capFloors = []
+            for i in range(priceYearOnYearInflationCapFloorRequest.CapFloorsLength()):
+                if priceYearOnYearInflationCapFloorRequest.CapFloors(i) is None:
+                    self.capFloors.append(None)
+                else:
+                    priceYoYInflationCapFloor_ = PriceYoYInflationCapFloorT.InitFromObj(priceYearOnYearInflationCapFloorRequest.CapFloors(i))
+                    self.capFloors.append(priceYoYInflationCapFloor_)
+
+    # PriceYearOnYearInflationCapFloorRequestT
+    def Pack(self, builder):
+        if self.pricing is not None:
+            pricing = self.pricing.Pack(builder)
+        if self.capFloors is not None:
+            capFloorslist = []
+            for i in range(len(self.capFloors)):
+                capFloorslist.append(self.capFloors[i].Pack(builder))
+            PriceYearOnYearInflationCapFloorRequestStartCapFloorsVector(builder, len(self.capFloors))
+            for i in reversed(range(len(self.capFloors))):
+                builder.PrependUOffsetTRelative(capFloorslist[i])
+            capFloors = builder.EndVector()
+        PriceYearOnYearInflationCapFloorRequestStart(builder)
+        if self.pricing is not None:
+            PriceYearOnYearInflationCapFloorRequestAddPricing(builder, pricing)
+        if self.capFloors is not None:
+            PriceYearOnYearInflationCapFloorRequestAddCapFloors(builder, capFloors)
+        priceYearOnYearInflationCapFloorRequest = PriceYearOnYearInflationCapFloorRequestEnd(builder)
+        return priceYearOnYearInflationCapFloorRequest
